# 2023-Tongji-SoftwareEngineering-FinalAssignment-Hearthstone

./: 1  CMakeLists.txt  HearthStone.sln  HearthStone.vcxproj  HearthStone.vcxproj.filters  README.md  项目文档.doc
Classes/: AppDelegate.cpp  AppDelegate.h
Classes/Animation/: AnimationManager.cpp  AnimationManager.h
Classes/Audio/: AudioManager.cpp  AudioManager.h
Classes/Battle/: CombatManager.cpp  CombatManager.h
Classes/Card/: Card.cpp  Card.h  CardFactory.cpp  CardFactory.h  Deck.cpp  Deck.h  DeckManager.cpp  DeckManager.h  MinionCard.cpp  MinionCard.h  SpellCard.cpp  SpellCard.h
Classes/Classes/: AppDelegate.cpp
Classes/Classes/Audio/: AudioManager.cpp
Classes/Classes/Card/: MinionCard.cpp  SpellCard.h
Classes/Classes/Game/: GameManager.h  TurnSystem.cpp
Classes/Classes/Network/: NetworkManager.h
Classes/Classes/Player/: Player.h
Classes/Classes/Scene/: GameScene.cpp
Classes/Classes/Utils/: ConfigManager.h  ResourceManager.h  Utils.h
Classes/Effect/: BattlecryEffect.h  CardEffects.h  DamageEffect.cpp  DamageEffect.h  EffectManager.cpp  EffectManager.h  EffectTypes.h  HealEffect.cpp  HealEffect.h  IEffect.h  SpellEffect.h
Classes/Game/: GameManager.cpp  TurnSystem.cpp  TurnSystem.h
Classes/Manager/: GameManager.cpp  GameManager.h
Classes/Network/: GameAction.h  NetworkManager.cpp  NetworkManager.h  WebSocketClient.h
Classes/Player/: Player.cpp  Player.h
Classes/Scene/: DeckBuilderScene.cpp  DeckBuilderScene.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  SelectCardsScene.cpp  SelectCardsScene.h  Settingscene1.cpp  Settingscene1.h  Settingscene2.cpp  Settingscene2.h
Classes/Utils/: ConfigManager.cpp  ConfigManager.h  Constants.h  GameLogger.cpp  GameLogger.h  ResourceManager.h  Utils.h
Resources/: CMakeLists.txt  FinalProjectForHearthStoneProjectsProjectsHearthStonegame_log.txt
炉石传说全2D资源-UI-特效/炉石传说全2D资源-UI-特效/actors/: Thumbs.db
炉石传说全2D资源-UI-特效/炉石传说全2D资源-UI-特效/actors0/: Thumbs.db
炉石传说全2D资源-UI-特效/炉石传说全2D资源-UI-特效/actors1/: Thumbs.db
炉石传说全2D资源-UI-特效/炉石传说全2D资源-UI-特效/boards/: Thumbs.db
炉石传说全2D资源-UI-特效/炉石传说全2D资源-UI-特效/boards0/: Thumbs.db
炉石传说全2D资源-UI-特效/炉石传说全2D资源-UI-特效/cards/: Thumbs.db
炉石传说全2D资源-UI-特效/炉石传说全2D资源-UI-特效/cards0/: Thumbs.db
炉石传说全2D资源-UI-特效/炉石传说全2D资源-UI-特效/cards1/: Thumbs.db
炉石传说全2D资源-UI-特效/炉石传说全2D资源-UI-特效/gameobjects/: Thumbs.db
炉石传说全2D资源-UI-特效/炉石传说全2D资源-UI-特效/gameobjects0/: Thumbs.db
炉石传说全2D资源-UI-特效/炉石传说全2D资源-UI-特效/resources-assets/: Thumbs.db
炉石传说全2D资源-UI-特效/炉石传说全2D资源-UI-特效/sharedassets3-assets/: Thumbs.db
炉石传说全2D资源-UI-特效/炉石传说全2D资源-UI-特效/spells0/: Thumbs.db
炉石传说全2D资源-UI-特效/炉石传说全2D资源-UI-特效/spells1/: Thumbs.db
炉石传说全2D资源-UI-特效/炉石传说全2D资源-UI-特效/textures/: Thumbs.db
炉石传说全2D资源-UI-特效/炉石传说全2D资源-UI-特效/textures0/: Thumbs.db
炉石传说全2D资源-UI-特效/炉石传说全2D资源-UI-特效/uiscreens/: Thumbs.db
炉石传说全2D资源-UI-特效/炉石传说全2D资源-UI-特效/uiscreens0/: Thumbs.db
